# TwitchFollowerChecker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  local_config.cmake.example
doc/: README.md  basic_design.md  detailed_design.md  requirements_definition.md  test_specification.md
src/: cat_png.h  configmanager.cpp  configmanager.h  followermodel.cpp  followermodel.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  twitchapiclient.cpp  twitchapiclient.h  twitchauth.cpp  twitchauth.h
src/test/: test_main.cpp
